# LoopingGameMusic

./: .gitignore  README.md  get_brstm.py  loop_gui.py  loopaudio.py  requirements.txt  setup.cfg  setup.py
examples/: dolphin_shoals.json  mount_wario.json
loopaudio/: __init__.py  __main__.py  convert.py  gui.py
src/loopaudio/: __init__.py  __main__.py  convert.py  gui.py
