[metadata]
name = loopaudio
description = Player for looping video game music
author = 1337lilDavid
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	loopaudio
install_requires =
	sounddevice>=0.4
	SoundFile>=0.10
	requests>=2
	ffmpeg_python>=0.2
	numpy>=1.21
	mutagen>=1.45
	Babel>=2.9
	beautifulsoup4>=4.10
	dataclasses>=0.6
python_requires = >=3.6
package_dir =
	=src
zip_safe = no
